--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Death -- Poetry'
 - !lcsh 'Dance of death'
+- GITenberg
 title: Danse macabre
 url: http://www.gutenberg.org/ebooks/20077
